# project-detector

./: .gitignore  Cargo.toml  README.md  browser.js  build.rs  eslint.config.js  eslint.config.mjs  index.d.ts  index.js  original-ci.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project-detector.wasi-browser.js  project-detector.wasi.cjs  rustfmt.toml  tsconfig.json  tsdown.config.ts  vitest.config.ts
.cargo/: config.toml
.github/workflows/: CI.yml  ci.yml  release.yml
benchmark/: bench.ts  tsconfig.json
mock/harmony-project-2/: build-profile.json5  oh-package.json5
node/: index.ts  load.ts
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
scripts/: index-external-plugin.ts  resolve-plugin.ts  version.ts
src/: element_directory.rs  element_json_file.rs  element_json_file_name_reference.rs  element_json_file_reference.rs  lib.rs  module.rs  product.rs  project.rs  project_detector.rs  resource.rs  resource_directory.rs  resource_group.rs
src/files/: element_json_file.rs
src/node/: chokidar.ts  common.ts  element-directory.ts  index.ts  media-directory.ts  module.ts  product.ts  profile-directory.ts  project-detector.ts  project.ts  rawfile-directory.ts  resfile-directory.ts  resource-directory.ts  resource.ts  types.ts  watcher.ts
src/references/: element_json_file_reference.rs
src/rust/: element_directory.rs  lib.rs  media_directory.rs  module.rs  product.rs  (+7 more)
test/: index.spec.ts  index.test.ts  module-build-profile.spec.ts  node.spec.ts  project-build-profile.spec.ts  rust.spec.ts  utils.test.ts
(+35 files in other folders)
