[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "napi-package-template"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.0.0", features = ["serde-json"] }
napi-derive = "3.0.0"
url = "2.5.7"
serde = { version = "1.0", features = [ "derive" ] }
serde_json5 = "0.2.1"
serde_json = "1.0"
walkdir = "2.4"
path-clean = "0.1"
strum = "0.26"
strum_macros = "0.26"
tree-sitter = "0.24"
tree-sitter-json = "0.24"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"