[package]
authors = ["Naily Zero <zero@naily.cc>"]
edition = "2021"
name = "arkts-project-detector"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"
tree-sitter = "0.25.10"
tree-sitter-json = "0.24.8"
url = "2.5.7"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
