[package]
authors = [ "Naily Zero <zero@naily.cc>" ]
edition = "2021"
name = "arkts-project-detector"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = [ "cdylib" ]
path = "src/rust/lib.rs"

[dependencies]
napi = { version = "3.0.0", features = [ "serde-json" ] }
napi-derive = "3.0.0"
path-clean = "1.0.1"
serde = "1.0.228"
serde_json = "1.0.145"
serde_json5 = "0.2.1"
strum = "0.27.2"
strum_macros = "0.27.2"
tree-sitter = "0.25.10"
tree-sitter-json = "0.24.8"
url = "2.5.7"
walkdir = "2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
